Updated gradle to use jre 1.8

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,9 @@ dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 }
 
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
+
